--- a/package.xml
+++ b/package.xml
@@ -10,5 +10,7 @@
   <depend>roscpp</depend>
   <build_depend>actionlib</build_depend>
   <build_depend>str1ker</build_depend>
+  <build_depend>control_toolbox</build_depend>
   <exec_depend>actionlib</exec_depend>
+  <exec_depend>control_toolbox</exec_depend>
 </package>
