--- a/package.xml
+++ b/package.xml
@@ -7,9 +7,14 @@
   <license>GNU GPLv3</license>
 
   <buildtool_depend>catkin</buildtool_depend>
+
   <depend>roscpp</depend>
+
   <build_depend>actionlib</build_depend>
   <build_depend>control_toolbox</build_depend>
+  <build_depend>message_generation</build_depend>
+
   <exec_depend>actionlib</exec_depend>
   <exec_depend>control_toolbox</exec_depend>
+  <exec_depend>message_runtime</exec_depend>
 </package>
