--- a/config/presets/base.yaml
+++ b/config/presets/base.yaml
@@ -19,3 +19,13 @@ average: 8
 # control
 trajectoryTopic: /arm_velocity_controller/follow_joint_trajectory/goal
 joint: base
+# tune
+feedbackTopic: /tune/feedback
+commandTopic: /tune/command
+tolerance: 0.05
+pid:
+  p: 0.8678
+  i: 0.0119
+  d: 0.0
+  i_clamp: 1.0
+  antiwindup: false
