--- a/config/presets/forearm_actuator.yaml
+++ b/config/presets/forearm_actuator.yaml
@@ -3,29 +3,29 @@ rate: 50
 outputTopic: /pwm
 lpwm: 1
 rpwm: 0
-minPwm: 64
+minPwm: 200
 maxPwm: 255
 minVelocity: 0.0
 maxVelocity: 1.0
 # input
 inputTopic: /adc
 input: 0
-minReading: 347
-maxReading: 89
-minPos: -1.4929
-maxPos: 1.4929
+minReading: 976
+maxReading: 848
+minPos: -0.0508
+maxPos: 0
 threshold: 8
-average: 2
+average: 8
 # control
 trajectoryTopic: /arm_velocity_controller/follow_joint_trajectory/goal
-joint: base
+joint: upperarm_actuator
 # tune
 feedbackTopic: /tune/feedback
 commandTopic: /tune/command
-tolerance: 0.1
+tolerance: 0.0009
 pid:
-  p: 0.8678
-  i: 0.0119
-  d: 0.0
+  p: -0.6181
+  i: -0.003942
+  d: 0
   i_clamp: 1.0
   antiwindup: false
