--- a/config/joint.yaml
+++ b/config/joint.yaml
@@ -10,14 +10,14 @@ maxVelocity: 1.0
 # input
 inputTopic: /adc
 input: 0
-minReading: 810
-maxReading: 258
-minPos: 0
-maxPos: 1
+minReading: 283
+maxReading: 771
+minPos: -1.5708
+maxPos: 1.5708
 threshold: 8
 average: 2
 # control
-trajectoryTopic: /arm_velocity_controller/follow_joint_trajectory/goal
+trajectoryTopic: /move_group/goal
 joint: base
 # tune
 feedbackTopic: /tune/feedback
